--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2165,6 +2165,8 @@ then {11,99 TRY/Month}*/
 "printed_photo_card_info" = "Bëni 5 fotografi të shtypura çdo muaj.";
 "printed_photo_card_body" = "Printoni fotot tuaja.";
 "printed_photo_card_body_no_right" = "Ju keni përdorur të drejtat tuaja të printimit të fotografive.";
+
+/*Fuzzy*/
 "printed_photo_card_info_no_right" = "Kur paketa juaj të rinovohet, provo përsëri.";
 "printed_package_view" = "Shiko paketat e mia të printimit.";
 "more_photo_right" = "Ju keni më shumë se %d dorëzim fotografie. A jeni i sigurt që doni të vazhdoni?";
