--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2124,6 +2124,8 @@ then {11,99 TRY/Month}*/
 "printed_photo_card_info" = "Друкуйте 5 фотографій щомісяця.";
 "printed_photo_card_body" = "Роздрукуйте свої фотографії.";
 "printed_photo_card_body_no_right" = "Ви використали свої права на друк фотографій.";
+
+/*Fuzzy*/
 "printed_photo_card_info_no_right" = "Коли ваш пакет буде поновлено, спробуйте ще раз.";
 "printed_package_view" = "Переглянути мої пакети для друку.";
 "more_photo_right" = "Ви вибрали більше ніж %d фотографій. Ви впевнені, що хочете продовжити?";
