--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -2220,3 +2220,4 @@ then {11,99 TRY/Month}*/
 
 /*Fuzzy*/
 "free_up_space_title_settings" = "Eliberați spațiu pe dispozitivul dumneavoastră.";
+"recommended" = "Recomandat";
