--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1928,9 +1928,9 @@
 "profile_recovery_email_is_same_with_account_email" = "Recovery e-mail and profile e-mail can't be the same.";
 "forgotMyPassword_your_account_email" = "Your e-mail or phone number associated with your account";
 "forgotMyPassword_enter_your_account_email" = "Enter your e-mail or phone number associated with your account";
-"forgotMyPassword_instructions" = "To reset your password we will send a link to your e-mail associated with your account:";
+"forgotMyPassword_instructions" = "We need to find the account. Can you enter your account's email address or phone number with us to continue?";
 "forgotMyPassword_enter_valid_email" = "Please enter a valid e-mail or phone number";
-"forgotMyPassword_reset_button" = "Reset Password";
+"forgotMyPassword_reset_button" = "Continue";
 "forgotMyPassword_challange1_header" = "Please Select a Verification Method";
 "forgotMyPassword_challange1_body" = "To reset your password, which verification method would you like to continue with?";
 "forgotMyPassword_phone_number" = "Phone Number";
@@ -2282,3 +2282,4 @@ then {11,99 TRY/Month}*/
 
 /*Fuzzy*/
 "free_up_space_title_settings" = "Free up space on your device.";
+"recommended" = "Recommended";
