--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1928,9 +1928,9 @@
 "profile_recovery_email_is_same_with_account_email" = "Recovery e-mail and profile e-mail can't be the same.";
 "forgotMyPassword_your_account_email" = "Your e-mail or phone number associated with your account";
 "forgotMyPassword_enter_your_account_email" = "Enter your e-mail or phone number associated with your account";
-"forgotMyPassword_instructions" = "To reset your password we will send a link to your e-mail associated with your account:";
+"forgotMyPassword_instructions" = "We need to find the account. Can you enter your account's email address or phone number with us to continue?";
 "forgotMyPassword_enter_valid_email" = "Please enter a valid e-mail or phone number";
-"forgotMyPassword_reset_button" = "Reset Password";
+"forgotMyPassword_reset_button" = "Continue";
 "forgotMyPassword_challange1_header" = "Please Select a Verification Method";
 "forgotMyPassword_challange1_body" = "To reset your password, which verification method would you like to continue with?";
 "forgotMyPassword_phone_number" = "Phone Number";
@@ -2184,12 +2184,16 @@ then {11,99 TRY/Month}*/
 "printed_photo_card_info" = "Have 5 photos printed each month.";
 "printed_photo_card_body" = "Have your photos printed.";
 "printed_photo_card_body_no_right" = "You've used your photo printing rights.";
-"printed_photo_card_info_no_right" = "You can reprint as of the %d date.";
+
+/*Fuzzy*/
+"printed_photo_card_info_no_right" = "When your package is renewed, try again.";
 "printed_package_view" = "View My Print Packages";
 "more_photo_right" = "You've got %d more photo submission. Are you sure you want to continue?";
 "no_more_photo_right" = "Has seleccionado más de %d fotos. Reduzca para continuar.";
-"timeline_header" = "The best memories of %d";
-"timeline_description" = "We have compiled the best memories of this year for you. Check them out now!";
+"timeline_header" = "The Best Memories of 2023";
+
+/*Fuzzy*/
+"timeline_description" = "We have compiled the best memories of 2023 for you. Check them out now!";
 "selected_for_print" = "Selected for printing";
 "print_cancel_popup_question" = "Are you sure you want to cancel?";
 "print_cancel_popup_info" = "All photo edits you have selected for the printed album will be deleted. You will need to select and edit photos again.";
@@ -2266,11 +2270,16 @@ then {11,99 TRY/Month}*/
 "order_not_delivered" = "Your order could not be delivered to print";
 "order_not_delivered_detail" = "Your order could not be delivered to print for technical reasons. Please send a new print again.";
 "grace_banner_paycell_text" = "";
+
+/*Fuzzy*/
 "sync_page_offer_pop_up" = "Click now to discover advantageous lifebox packages special for you!";
-"sync_page_offer_pop_up" = "";
 "validate_purchase_already_subscribed_text" = "Subscription related with this purchase is already activated on account %@ with email %@ for another lifebox user. Note that using different lifebox accounts with the same Apple/Google account might result with this situation.";
 "print_edit_cancel_popup_info" = "Your photo edits will be deleted.";
 "revert_to_original" = "Revert to Original";
 "save_changes" = "";
 "ACCOUNT_HAS_SLCM_SUBSCRIPTION" = "To change your phone number, you must first cancel your lifebox package, which is included in the phone bill. Please call Turkcell customer services.";
 "ACCOUNT_HAS_FOREIGN_SUBSCRIPTION" = "To change your phone number, first contact your operator and have your packages canceled.";
+
+/*Fuzzy*/
+"free_up_space_title_settings" = "Free up space on your device.";
+"recommended" = "Recommended";
