--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1896,11 +1896,11 @@
 "profile_recovery_email_is_same_with_account_email" = "Kurtarma e-postası ile profil e-postası aynı olamaz.";
 "forgotMyPassword_your_account_email" = "Hesabına ait e-posta veya telefon numarası";
 "forgotMyPassword_enter_your_account_email" = "Hesabına ait e-postanı veya telefon numaranı gir";
-"forgotMyPassword_instructions" = "Şifreni sıfırlamak için hesabına ait e-posta adresine veya telefon numarasına şifre sıfırlama linki göndereceğiz:";
+"forgotMyPassword_instructions" = "Öncelikle hesabını bulmalıyız. Devam etmek için hesabına ait e-posta adresini veya telefon numarasını bizimle paylaşabilir misin?";
 "forgotMyPassword_enter_valid_email" = "Lütfen geçerli bir e-posta veya telefon numarası gir";
-"forgotMyPassword_reset_button" = "Şifre Sıfırla";
+"forgotMyPassword_reset_button" = "Devam Et";
 "forgotMyPassword_challange1_header" = "Doğrulama Yöntemini Seçin";
-"forgotMyPassword_challange1_body" = "Şifre yenileme akışına aşağıdaki doğrulama yöntemlerinden hangisi ile devam etmek istersin?";
+"forgotMyPassword_challange1_body" = "Şifre yenileme için aşağıdaki yöntemlerden hangisi ile devam etmek istersin?";
 "forgotMyPassword_phone_number" = "Telefon Numarası";
 "forgotMyPassword_mail" = "E-posta";
 "forgotMyPassword_recovery_mail" = "Kurtarma E-postası";
@@ -1908,7 +1908,7 @@
 "forgotMyPassword_continue" = "Devam Et";
 "forgotMyPassword_email_popup_message" = "Şifreni sıfırlaman için %@ e-posta adresine şifre sıfırlama linki gönderdik.";
 "forgotMyPassword_challange2_header" = "Doğrulama Yöntemini Seçin";
-"forgotMyPassword_challange2_body" = "Şifre yenileme akışına aşağıdaki doğrulama yöntemlerinden hangisi ile devam etmek istersin?";
+"forgotMyPassword_challange2_body" = "Güvenliğin için ikincil bir doğrulama yöntemine ihtiyaç bulunuyor. Şifre yenileme işlemine aşağıdaki yöntemlerden hangisi ile devam etmek istersin?";
 "masterpass_feature_package_cancel" = "Paketini iptal etmek için www.mylifebox.com adresini ziyaret edebilirsin.";
 "forgotMyPassword_password_complete" = "Tamam";
 "forgotMyPassword_reset_success_message" = "Şifre yenileme işleminiz başarıyla tamamlandı.";
@@ -2176,14 +2176,18 @@ then {11,99 TRY/Month}*/
 "printed_photo_card_info" = "Her ay 5 adet fotoğrafını bastır.";
 "printed_photo_card_body" = "Fotoğraflarını bastır.";
 "printed_photo_card_body_no_right" = "Fotoğraf baskılama hakkını kullandın.";
-"printed_photo_card_info_no_right" = "%d tarihi itibariyle tekrar baskı oluşturabilirsin.";
+
+/*Fuzzy*/
+"printed_photo_card_info_no_right" = "Paketin yenilendiğinde tekrar dene.";
 
 /*Fuzzy*/
 "printed_package_view" = "Baskı paketlerimi gör.";
 "more_photo_right" = "%d fotoğraf gönderme hakkın daha var. Devam etmek istediğine emin misin?";
 "no_more_photo_right" = "%d’ten fazla fotoğraf seçtin. Devam edebilmek için azaltın.";
-"timeline_header" = "%d en güzel anıları";
-"timeline_description" = "%d yılının en güzel anılarını senin için derledik. Hemen keşfet.";
+"timeline_header" = "2023 En Güzel Anıları";
+
+/*Fuzzy*/
+"timeline_description" = "2023 yılının en güzel anılarını senin için derledik. Hemen keşfet.";
 "selected_for_print" = "Baskı için seçilenler";
 "print_cancel_popup_question" = "İptal etmek isteğine emin misin?";
 "print_cancel_popup_info" = "Basılı albüm için seçtiğin tüm fotoğraf düzenlemelerin silinecektir. Yeniden fotoğraf seçmen ve yeniden düzenlemen gereklidir.";
@@ -2272,11 +2276,16 @@ then {11,99 TRY/Month}*/
 "order_not_delivered" = "Siparişin Baskıya Teslim Edilemedi";
 "order_not_delivered_detail" = "Siparişin teknik nedenlerden dolayı baskıya teslim edilemedi. Lütfen tekrar yeni baskı gönderiniz.";
 "grace_banner_paycell_text" = "";
+
+/*Fuzzy*/
 "sync_page_offer_pop_up" = "Sana özel avantajlı lifebox paketlerini keşfetmek için hemen tıkla!";
-"sync_page_offer_pop_up" = "Size özel tekliflerimizi görmek ister misiniz?";
 "validate_purchase_already_subscribed_text" = "Kullanmakta olduğunuz Apple/Google hesabı ile satın alınmış paketler %@ kullanıcısı, %@email ile kullanımdadır. Aynı Apple/Google hesabıyla farklı lifebox hesaplarının kullanılmasının bu duruma yol açabileceğini unutmayın.";
 "print_edit_cancel_popup_info" = "Yapılan fotoğraf düzenlemelerin silinecektir.";
 "revert_to_original" = "Özgüne Dön";
 "save_changes" = "Değişiklikleri Kaydet";
 "ACCOUNT_HAS_SLCM_SUBSCRIPTION" = "Telefon numaranızı değiştirebilmek için öncelikle ücreti telefon faturanıza dahil olan lifebox paketinizi iptal etmeniz gerekmektedir. Lütfen Turkcell müşteri hizmetlerini arayınız.";
 "ACCOUNT_HAS_FOREIGN_SUBSCRIPTION" = "Telefon numaranızı değiştirmek için öncelikle operatörünüz ile iletişime geçerek paketlerinizin iptal edilmesini sağlayınız.";
+
+/*Fuzzy*/
+"free_up_space_title_settings" = "Telefonunun hafizasında yer aç.";
+"recommended" = "Önerilen";
