--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2142,10 +2142,6 @@ then {11,99 TRY/Month}*/
 "printed_package_view" = "Посмотреть мои пакеты печати.";
 "more_photo_right" = "У вас есть еще %d фотографий для отправки. Вы уверены, что хотите продолжить?";
 "no_more_photo_right" = "Вы выбрали более %d фотографий. Уменьшите, чтобы продолжить.";
-"timeline_header" = "Лучшие воспоминания %d года";
-
-/*Fuzzy*/
-"timeline_description" = "Мы собрали для вас лучшие воспоминания этого года. Посмотрите их прямо сейчас!";
 "timeline_header" = "Лучшие воспоминания 2023 года";
 
 /*Fuzzy*/
@@ -2235,8 +2231,8 @@ then {11,99 TRY/Month}*/
 "save_changes" = "Сохранить Изменения";
 "ACCOUNT_HAS_SLCM_SUBSCRIPTION" = "Чтобы сменить номер телефона, необходимо сначала отказаться от пакета lifebox, который подключен к счету за телефон. Пожалуйста, обратитесь в службу поддержки Turkcell.";
 "ACCOUNT_HAS_FOREIGN_SUBSCRIPTION" = "Чтобы изменить номер телефона, необходимо сначала обратиться к своему оператору и попросить аннулировать ваши пакеты.";
-"free_up_space_title_settings" = "";
 
 /*Fuzzy*/
 "free_up_space_title_settings" = "Освободите место на вашем устройстве.";
 "recommended" = "Рекомендуемый";
+"dont_miss_opportunity" = "";
