--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2130,10 +2130,6 @@ then {11,99 TRY/Month}*/
 "printed_package_view" = "Переглянути мої пакети для друку.";
 "more_photo_right" = "Ви вибрали більше ніж %d фотографій. Ви впевнені, що хочете продовжити?";
 "no_more_photo_right" = "Ви вибрали більше %d фотографій. Зменшіть, щоб продовжити.";
-"timeline_header" = "Найкращі спогади %d року";
-
-/*Fuzzy*/
-"timeline_description" = "Ми зібрали для вас найкращі спогади цього року. Перевірте їх зараз!";
 "timeline_header" = "Найкращі спогади 2023 року";
 
 /*Fuzzy*/
@@ -2223,8 +2219,8 @@ then {11,99 TRY/Month}*/
 "save_changes" = "Зберегти Зміни";
 "ACCOUNT_HAS_SLCM_SUBSCRIPTION" = "Для того, щоб змінити номер телефону, необхідно спочатку відключити пакет lifebox, який включено в рахунок за телефонний зв'язок. Будь ласка, зверніться до служби підтримки клієнтів Turkcell.";
 "ACCOUNT_HAS_FOREIGN_SUBSCRIPTION" = "Щоб змінити номер телефону, необхідно спочатку звернутися до свого оператора і попросити анулювати ваші пакети.";
-"free_up_space_title_settings" = "";
 
 /*Fuzzy*/
 "free_up_space_title_settings" = "Звільніть місце в пам'яті вашого телефону.";
 "recommended" = "Рекомендований";
+"dont_miss_opportunity" = "";
