--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2170,10 +2170,6 @@ then {11,99 TRY/Month}*/
 "printed_package_view" = "Ver mis paquetes de impresión";
 "more_photo_right" = "Tienes %d más envío de fotos. ¿Está seguro de que desea continuar?";
 "no_more_photo_right" = "Has seleccionado más de %d fotos. Reduzca para continuar.";
-"timeline_header" = "Los mejores recuerdos de %d";
-
-/*Fuzzy*/
-"timeline_description" = "Hemos recopilado los mejores recuerdos de este año para ti. ¡Compruébalos ahora!";
 "timeline_header" = "Los mejores recuerdos de 2023";
 
 /*Fuzzy*/
@@ -2263,8 +2259,8 @@ then {11,99 TRY/Month}*/
 "save_changes" = "Guardar Cambios";
 "ACCOUNT_HAS_SLCM_SUBSCRIPTION" = "Para cambiar tu número de teléfono, primero debes cancelar tu paquete lifebox, que está incluido en la factura telefónica. Por favor, llama al servicio de atención al cliente de Turkcell.";
 "ACCOUNT_HAS_FOREIGN_SUBSCRIPTION" = "Para cambiar de número de teléfono, ponte primero en contacto con tu operador y haz que cancelen tus paquetes.";
-"free_up_space_title_settings" = "";
 
 /*Fuzzy*/
 "free_up_space_title_settings" = "Libera espacio de memoria en tu teléfono.";
 "recommended" = "Recomendado";
+"dont_miss_opportunity" = "";
