LB-5986 print package additional feature

--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -2222,3 +2222,4 @@ then {11,99 TRY/Month}*/
 "free_up_space_title_settings" = "Geben Sie Speicherplatz auf Ihrem Gerät frei.";
 "recommended" = "Empfohlen";
 "dont_miss_opportunity" = "";
+"print_package_print_firm" = "";
