--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2264,3 +2264,4 @@ then {11,99 TRY/Month}*/
 "free_up_space_title_settings" = "Libera espacio de memoria en tu teléfono.";
 "recommended" = "Recomendado";
 "dont_miss_opportunity" = "";
+"print_package_print_firm" = "";
