--- a/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
@@ -2212,3 +2212,4 @@ then {11,99 TRY/Month}*/
 "free_up_space_title_settings" = "გაათავისუფლე სივრცე შენს მოწყობილობაში.";
 "recommended" = "რეკომენდირებულია";
 "dont_miss_opportunity" = "";
+"print_package_print_firm" = "";
