--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2265,3 +2265,4 @@ then {11,99 TRY/Month}*/
 "free_up_space_title_settings" = "Lironi hapësirë në pajisjen tuaj.";
 "recommended" = "Rekomandohet";
 "dont_miss_opportunity" = "";
+"print_package_print_firm" = "";
