--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -2234,3 +2234,4 @@ then {11,99 TRY/Month}*/
 "free_up_space_title_settings" = "تحرير مساحة على جهازك.";
 "recommended" = "الموصى بها";
 "dont_miss_opportunity" = "";
+"print_package_print_firm" = "";
