--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -2222,3 +2222,4 @@ then {11,99 TRY/Month}*/
 "free_up_space_title_settings" = "Eliberați spațiu pe dispozitivul dumneavoastră.";
 "recommended" = "Recomandat";
 "dont_miss_opportunity" = "";
+"print_package_print_firm" = "";
