--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2236,3 +2236,4 @@ then {11,99 TRY/Month}*/
 "free_up_space_title_settings" = "Освободите место на вашем устройстве.";
 "recommended" = "Рекомендуемый";
 "dont_miss_opportunity" = "";
+"print_package_print_firm" = "";
