--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2527,4 +2527,4 @@ then {11,99 TRY/Month}*/
 "free_up_space_title_settings" = "Libérez de l'espace sur votre appareil.";
 "recommended" = "Recommandé";
 "dont_miss_opportunity" = "";
-"print_package_print_firm" = "";
+"print_package_print_firm" = "Les photos seront imprimées par une imprimerie sous contrat.";
