--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2224,4 +2224,4 @@ then {11,99 TRY/Month}*/
 "free_up_space_title_settings" = "Звільніть місце в пам'яті вашого телефону.";
 "recommended" = "Рекомендований";
 "dont_miss_opportunity" = "";
-"print_package_print_firm" = "";
+"print_package_print_firm" = "Фотографії будуть надруковані поліграфічною компанією, з якою укладено договір.";
