--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -2235,3 +2235,4 @@ then {11,99 TRY/Month}*/
 "recommended" = "الموصى بها";
 "dont_miss_opportunity" = "";
 "print_package_print_firm" = "ستتم طباعة الصور من قبل شركة طباعة متعاقدة.";
+"sync_in_progress_delete_is_not_allowed" = "";
