--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -2223,3 +2223,4 @@ then {11,99 TRY/Month}*/
 "recommended" = "Empfohlen";
 "dont_miss_opportunity" = "";
 "print_package_print_firm" = "Der Druck der Fotos erfolgt durch eine beauftragte Druckerei.";
+"sync_in_progress_delete_is_not_allowed" = "";
