--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2285,3 +2285,4 @@ then {11,99 TRY/Month}*/
 "recommended" = "Recommended";
 "dont_miss_opportunity" = "";
 "print_package_print_firm" = "Photos will be printed by a contracted printing company.";
+"sync_in_progress_delete_is_not_allowed" = "";
