--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2265,3 +2265,4 @@ then {11,99 TRY/Month}*/
 "recommended" = "Recomendado";
 "dont_miss_opportunity" = "";
 "print_package_print_firm" = "Las fotos serán impresas por una imprenta contratada.";
+"sync_in_progress_delete_is_not_allowed" = "";
