--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2528,3 +2528,4 @@ then {11,99 TRY/Month}*/
 "recommended" = "Recommandé";
 "dont_miss_opportunity" = "";
 "print_package_print_firm" = "Les photos seront imprimées par une imprimerie sous contrat.";
+"sync_in_progress_delete_is_not_allowed" = "";
