--- a/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
@@ -2213,3 +2213,4 @@ then {11,99 TRY/Month}*/
 "recommended" = "რეკომენდირებულია";
 "dont_miss_opportunity" = "";
 "print_package_print_firm" = "";
+"sync_in_progress_delete_is_not_allowed" = "";
