--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2237,3 +2237,4 @@ then {11,99 TRY/Month}*/
 "recommended" = "Рекомендуемый";
 "dont_miss_opportunity" = "";
 "print_package_print_firm" = "Фотографии будут напечатаны в типографии, с которой был заключен договор.";
+"sync_in_progress_delete_is_not_allowed" = "";
