--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2266,3 +2266,4 @@ then {11,99 TRY/Month}*/
 "recommended" = "Rekomandohet";
 "dont_miss_opportunity" = "";
 "print_package_print_firm" = "Fotot do të printohen nga një kompani printimi e kontraktuar.";
+"sync_in_progress_delete_is_not_allowed" = "";
