--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -2225,3 +2225,4 @@ then {11,99 TRY/Month}*/
 "recommended" = "Рекомендований";
 "dont_miss_opportunity" = "";
 "print_package_print_firm" = "Фотографії будуть надруковані поліграфічною компанією, з якою укладено договір.";
+"sync_in_progress_delete_is_not_allowed" = "";
