--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2266,3 +2266,6 @@ then {11,99 TRY/Month}*/
 "dont_miss_opportunity" = "";
 "print_package_print_firm" = "Las fotos serán impresas por una imprenta contratada.";
 "sync_in_progress_delete_is_not_allowed" = "";
+"connected_devices" = "";
+"scan_qr_code" = "";
+"scan_qr_code_info" = "";
