--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -2292,3 +2292,8 @@ then {11,99 TRY/Month}*/
 "dont_miss_opportunity" = "Fırsatı Kaçırma";
 "print_package_print_firm" = "Fotoğraflar anlaşmalı baskı firması tarafından basılacaktır.";
 "sync_in_progress_delete_is_not_allowed" = "";
+
+/*Fuzzy*/
+"connected_devices" = "Bağlı Cihazlar";
+"scan_qr_code" = "QR Kodu Tara";
+"scan_qr_code_info" = "Bağlamak istediğiniz cihazınız üzerindeki QR kodu telefonunuzdan okutunuz.";
