LB-6107 scan qr code api integration

--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2528,7 +2528,8 @@ then {11,99 TRY/Month}*/
 "recommended" = "Recommandé";
 "dont_miss_opportunity" = "";
 "print_package_print_firm" = "Les photos seront imprimées par une imprimerie sous contrat.";
-"sync_in_progress_delete_is_not_allowed" = "";
+"sync_in_progress_delete_is_not_allowed" = "La préparation de vos photos est en cours, vous ne pouvez pas les supprimer pour le moment. Veuillez réessayer plus tard.";
 "connected_devices" = "";
 "scan_qr_code" = "";
 "scan_qr_code_info" = "";
+"qr_code_try_again" = "";
