--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -2237,7 +2237,8 @@ then {11,99 TRY/Month}*/
 "recommended" = "Рекомендуемый";
 "dont_miss_opportunity" = "";
 "print_package_print_firm" = "Фотографии будут напечатаны в типографии, с которой был заключен договор.";
-"sync_in_progress_delete_is_not_allowed" = "";
+"sync_in_progress_delete_is_not_allowed" = "Идёт подготовка ваших фотографий, вы не можете удалить их в данный момент. Пожалуйста, повторите попытку позже.";
 "connected_devices" = "";
 "scan_qr_code" = "";
 "scan_qr_code_info" = "";
+"qr_code_try_again" = "";
