--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2266,7 +2266,8 @@ then {11,99 TRY/Month}*/
 "recommended" = "Rekomandohet";
 "dont_miss_opportunity" = "";
 "print_package_print_firm" = "Fotot do të printohen nga një kompani printimi e kontraktuar.";
-"sync_in_progress_delete_is_not_allowed" = "";
+"sync_in_progress_delete_is_not_allowed" = "Fotot tuaja janë duke u përgatitur, nuk mund t'i fshini ato për momentin. Ju lutemi provoni përsëri më vonë.";
 "connected_devices" = "";
 "scan_qr_code" = "";
 "scan_qr_code_info" = "";
+"qr_code_try_again" = "";
