--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -2285,4 +2285,15 @@ then {11,99 TRY/Month}*/
 "recommended" = "Recommended";
 "dont_miss_opportunity" = "";
 "print_package_print_firm" = "Photos will be printed by a contracted printing company.";
-"sync_in_progress_delete_is_not_allowed" = "";
+"sync_in_progress_delete_is_not_allowed" = "Your photos are preparing, you can not delete them at this time. Please try again later.";
+
+/*Fuzzy*/
+"connected_devices" = "Connect Device";
+"scan_qr_code" = "Scan QR Code";
+"scan_qr_code_info" = "Scan the QR code on the device you want to connect";
+"qr_code_try_again" = "QR code scanning failed. Please try again.";
+"print" = "Print";
+"photo_max_selection_title" = "";
+"photo_max_selection_body" = "";
+"set_recovery_mail_success" = "";
+"set_recoverymail_securityquestion_success" = "";
