--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -2265,4 +2265,13 @@ then {11,99 TRY/Month}*/
 "recommended" = "Recomendado";
 "dont_miss_opportunity" = "";
 "print_package_print_firm" = "Las fotos serán impresas por una imprenta contratada.";
-"sync_in_progress_delete_is_not_allowed" = "";
+"sync_in_progress_delete_is_not_allowed" = "Tus fotos están siendo preparadas, no puedes borrarlas en este momento. Vuelva a intentarlo más tarde.";
+"connected_devices" = "Conectar Dispositivo";
+"scan_qr_code" = "Escanear Código QR";
+"scan_qr_code_info" = "Escanee el código QR del dispositivo que desea conectar.";
+"qr_code_try_again" = "Error al escanear el código QR. Por favor, inténtelo de nuevo.";
+"print" = "";
+"photo_max_selection_title" = "";
+"photo_max_selection_body" = "";
+"set_recovery_mail_success" = "";
+"set_recoverymail_securityquestion_success" = "";
