--- a/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ka.lproj/OurLocalizable.strings
@@ -2214,3 +2214,12 @@ then {11,99 TRY/Month}*/
 "dont_miss_opportunity" = "";
 "print_package_print_firm" = "";
 "sync_in_progress_delete_is_not_allowed" = "";
+"connected_devices" = "";
+"scan_qr_code" = "";
+"scan_qr_code_info" = "შენი ფოტოები მზადდება, ამჯერად ვერ წაშლი. გთხოვთ, სცადო მოგვიანებით.";
+"qr_code_try_again" = "QR კოდის დასკანირება ვერ მოხერხდა. გთხოვთ, სცადო მოგვიანებით.";
+"print" = "";
+"photo_max_selection_title" = "";
+"photo_max_selection_body" = "";
+"set_recovery_mail_success" = "";
+"set_recoverymail_securityquestion_success" = "";
