--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -2223,4 +2223,13 @@ then {11,99 TRY/Month}*/
 "recommended" = "Recomandat";
 "dont_miss_opportunity" = "";
 "print_package_print_firm" = "Fotografiile vor fi tipărite de către compania de tipărire contractată.";
-"sync_in_progress_delete_is_not_allowed" = "";
+"sync_in_progress_delete_is_not_allowed" = "Fotografiile dvs. sunt în curs de pregătire, nu le puteți șterge în acest moment. Vă rugăm să încercați din nou mai târziu.";
+"connected_devices" = "Conectarea Dispozitivului";
+"scan_qr_code" = "Scanați Codul QR";
+"scan_qr_code_info" = "Scanați codul QR de pe dispozitivul pe care doriți să îl conectați.";
+"qr_code_try_again" = "Scanarea codului QR a eșuat. Vă rugăm să încercați din nou.";
+"print" = "";
+"photo_max_selection_title" = "";
+"photo_max_selection_body" = "";
+"set_recovery_mail_success" = "";
+"set_recoverymail_securityquestion_success" = "";
