--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -2266,4 +2266,13 @@ then {11,99 TRY/Month}*/
 "recommended" = "Rekomandohet";
 "dont_miss_opportunity" = "";
 "print_package_print_firm" = "Fotot do të printohen nga një kompani printimi e kontraktuar.";
-"sync_in_progress_delete_is_not_allowed" = "";
+"sync_in_progress_delete_is_not_allowed" = "Fotot tuaja janë duke u përgatitur, nuk mund t'i fshini ato për momentin. Ju lutemi provoni përsëri më vonë.";
+"connected_devices" = "Lidhni Pajisjen";
+"scan_qr_code" = "Skanoni Kodin QR";
+"scan_qr_code_info" = "Skanoni kodin QR në pajisjen që dëshironi të lidhni.";
+"qr_code_try_again" = "Skanimi i kodit QR dështoi. Ju lutem provoni përsëri.";
+"print" = "";
+"photo_max_selection_title" = "";
+"photo_max_selection_body" = "";
+"set_recovery_mail_success" = "";
+"set_recoverymail_securityquestion_success" = "";
